--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Joefrey &amp; Sheila</h1>
-							<h2>We Are Getting Married</h2>
+							<h1>Muhammad Nizam Maulana</h1>
+							<h2>Putra Bapak Nanang & Ibu Siti Mahmudah</h2>
 							<div class="simply-countdown simply-countdown-one"></div>
-							<p><a href="#" class="btn btn-default btn-sm">Save the date</a></p>
+							<p><a href="#" class="btn btn-default btn-sm">Simpan Tanggal Acara</a></p>
 						</div>
 					</div>
 				</div>
@@ -128,9 +128,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<h2>Hello!</h2>
-					<h3>November 28th, 2016 New York, USA</h3>
-					<p>We invited you to celebrate our wedding</p>
+					<h2>assalamualaikum warahmatullahi wabarakatuh</h2>
+					<h3>27 November 2022, Kebulusan, Kebumen</h3>
+					<p>Dengan Rahmat Allah yang Maha Kuasa Insha Allah kami akan melangsungkan Syukuran Khitanan</p>
 				</div>
 			</div>
 			<div class="couple-wrap animate-box">
