--- a/index.html
+++ b/index.html
@@ -138,12 +138,11 @@
 					<div class="groom">
 						<img src="images/nizam.jpg" alt="groom" class="img-responsive">
 					</div>
-					<div class="desc-groom">
+					<div class="desc-groom text-center">
 						<h3>Muhammad Nizam Maulana</h3>
 						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
 					</div>
 				</div>
-				<p class="heart text-center"><i class="icon-heart2"></i></p>
 				<div class="couple-half">
 				</div>
 			</div>
