--- a/index.html
+++ b/index.html
@@ -138,9 +138,11 @@
 					<div class="groom">
 						<img src="images/nizam.jpg" alt="groom" class="img-responsive">
 					</div>
+					<div class="row">
 					<div class="desc-groom text-center">
 						<h3>Muhammad Nizam Maulana</h3>
 						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
+					</div>
 					</div>
 				</div>
 				<div class="couple-half">
