--- a/index.html
+++ b/index.html
@@ -184,15 +184,57 @@
 						<div class="wrap-testimony">
 							<div class="owl-carousel-fullwidth">
 								<div class="item">
+									<div class="testimony-slide active text-center">
+										<figure>
+											<img src="images/couple-1.jpg" alt="user">
+										</figure>
+										<span>John Doe, via <a href="#" class="twitter">Twitter</a></span>
 										<blockquote>
 											<p>اَللهم وَفِّقْنَا ِلاجْتِلاَبِ الْفَضَائِلِ وَجَنِّبْنَا مِنْ اِقْتِرَاحِ الرَّذَائِلِ. رَبَّنَا تَقَبَّلْ مِنَّا اَعْذَارَنَا وَسَلِّمْ اُمُوْرَنَا وَصَحِّحْ مَخْتُوْنَنَا وَاقْضِ دُيُوْنَنَا وَبَلِّغْ اَمَالَنَا وَوَسِّعْ اَرْزَاقَنَا وَجُوْدِكَ يَاجَوَّادُ. اَللهم اِنَّا نَسْئَلُكَ السَّلاَمَ وَالْعَافِيَةَ عَلَيْنَا وَعَلَى الْحُجَّاجِ وَالْغُزَاةِ وَالْمُسَافِرِيْنَ مِنْ اُمَّةِ مُحَمَّدٍ صَلَّى اللهُ عَلَيْهِ وَسَلَّمَ اَجْمَعِيْنَ فِيْ بَرِّكَ وَبَحْرِكَ اِنَّكَ عَلى مَا تَشَاءُ قَدِيْرٌ يَا نِعْمَ الْمَوْلى وَنِعْمَ النَّصِيْرُ. سُبْحَانَ رَبِّكَ رَبِّ الْعِزَّةِ عَمَّا يَصِفُوْنَ وَسَلاَمٌ عَلَى الْمُرْسَلِيْنَ وَالْحَمْدُ لِلّٰهِ رَبِّ الْعَالَمِيْنَ</p>
 										</blockquote>
+									</div>
+								</div>
+								<div class="item">
+									<div class="testimony-slide active text-center">
+										<figure>
+											<img src="images/couple-2.jpg" alt="user">
+										</figure>
+										<span>John Doe, via <a href="#" class="twitter">Twitter</a></span>
+										<blockquote>
+											<p>"Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, at the coast of the Semantics, a large language ocean."</p>
+										</blockquote>
+									</div>
+								</div>
+								<div class="item">
+									<div class="testimony-slide active text-center">
+										<figure>
+											<img src="images/couple-3.jpg" alt="user">
+										</figure>
+										<span>John Doe, via <a href="#" class="twitter">Twitter</a></span>
+										<blockquote>
+											<p>"Far far away, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean."</p>
+										</blockquote>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+		</div>
+	</div>
+
+				</div>
+
+				<div class="col-md-6 animate-box">
+					<div class="fh5co-video fh5co-bg" style="background-image: url(images/img_bg_3.jpg); ">
+						<a href="https://vimeo.com/channels/staffpicks/93951774" class="popup-vimeo"><i class="icon-video2"></i></a>
+						<div class="overlay"></div>
+					</div>
+				</div>
+			</div>
+
+			
 		</div>
 	</div>
 
