--- a/index.html
+++ b/index.html
@@ -170,13 +170,66 @@
 		</div>
 	</div>
 
+	<div id="fh5co-counter" class="fh5co-bg fh5co-counter" style="background-image:url(images/img_bg_5.jpg);">
+		<div class="overlay"></div>
+		<div class="container">
+			<div class="row">
+				<div class="display-t">
+					<div class="display-tc">
+						<div class="col-md-3 col-sm-6 animate-box">
+							<div class="feature-center">
+								<span class="icon">
+									<i class="icon-users"></i>
+								</span>
+
+								<span class="counter js-counter" data-from="0" data-to="500" data-speed="5000" data-refresh-interval="50">1</span>
+								<span class="counter-label">Estimated Guest</span>
+
+							</div>
+						</div>
+						<div class="col-md-3 col-sm-6 animate-box">
+							<div class="feature-center">
+								<span class="icon">
+									<i class="icon-user"></i>
+								</span>
+
+								<span class="counter js-counter" data-from="0" data-to="1000" data-speed="5000" data-refresh-interval="50">1</span>
+								<span class="counter-label">We Catter</span>
+							</div>
+						</div>
+						<div class="col-md-3 col-sm-6 animate-box">
+							<div class="feature-center">
+								<span class="icon">
+									<i class="icon-calendar"></i>
+								</span>
+								<span class="counter js-counter" data-from="0" data-to="402" data-speed="5000" data-refresh-interval="50">1</span>
+								<span class="counter-label">Events Done</span>
+							</div>
+						</div>
+						<div class="col-md-3 col-sm-6 animate-box">
+							<div class="feature-center">
+								<span class="icon">
+									<i class="icon-clock"></i>
+								</span>
+
+								<span class="counter js-counter" data-from="0" data-to="2345" data-speed="5000" data-refresh-interval="50">1</span>
+								<span class="counter-label">Hours Spent</span>
+
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<div id="fh5co-testimonial">
 		<div class="container">
 			<div class="row">
 				<div class="row animate-box">
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-						<span>*-*</span>
-						<h2>Doa Khitanan/h2>
+						<span>Best Wishes</span>
+						<h2>Friends Wishes</h2>
 					</div>
 				</div>
 				<div class="row">
@@ -188,31 +241,9 @@
 										<figure>
 											<img src="images/couple-1.jpg" alt="user">
 										</figure>
-										<span>John Doe, via <a href="#" class="twitter">Twitter</a></span>
+										<span></a></span>
 										<blockquote>
-											<p>اَللهم وَفِّقْنَا ِلاجْتِلاَبِ الْفَضَائِلِ وَجَنِّبْنَا مِنْ اِقْتِرَاحِ الرَّذَائِلِ. رَبَّنَا تَقَبَّلْ مِنَّا اَعْذَارَنَا وَسَلِّمْ اُمُوْرَنَا وَصَحِّحْ مَخْتُوْنَنَا وَاقْضِ دُيُوْنَنَا وَبَلِّغْ اَمَالَنَا وَوَسِّعْ اَرْزَاقَنَا وَجُوْدِكَ يَاجَوَّادُ. اَللهم اِنَّا نَسْئَلُكَ السَّلاَمَ وَالْعَافِيَةَ عَلَيْنَا وَعَلَى الْحُجَّاجِ وَالْغُزَاةِ وَالْمُسَافِرِيْنَ مِنْ اُمَّةِ مُحَمَّدٍ صَلَّى اللهُ عَلَيْهِ وَسَلَّمَ اَجْمَعِيْنَ فِيْ بَرِّكَ وَبَحْرِكَ اِنَّكَ عَلى مَا تَشَاءُ قَدِيْرٌ يَا نِعْمَ الْمَوْلى وَنِعْمَ النَّصِيْرُ. سُبْحَانَ رَبِّكَ رَبِّ الْعِزَّةِ عَمَّا يَصِفُوْنَ وَسَلاَمٌ عَلَى الْمُرْسَلِيْنَ وَالْحَمْدُ لِلّٰهِ رَبِّ الْعَالَمِيْنَ</p>
-										</blockquote>
-									</div>
-								</div>
-								<div class="item">
-									<div class="testimony-slide active text-center">
-										<figure>
-											<img src="images/couple-2.jpg" alt="user">
-										</figure>
-										<span>John Doe, via <a href="#" class="twitter">Twitter</a></span>
-										<blockquote>
-											<p>"Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, at the coast of the Semantics, a large language ocean."</p>
-										</blockquote>
-									</div>
-								</div>
-								<div class="item">
-									<div class="testimony-slide active text-center">
-										<figure>
-											<img src="images/couple-3.jpg" alt="user">
-										</figure>
-										<span>John Doe, via <a href="#" class="twitter">Twitter</a></span>
-										<blockquote>
-											<p>"Far far away, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean."</p>
+											<p>"Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics"</p>
 										</blockquote>
 									</div>
 								</div>
