--- a/index.html
+++ b/index.html
@@ -65,26 +65,6 @@
 				<div class="col-xs-10 text-right menu-1">
 					<ul>
 						<li class="active"><a href="index.html">Home</a></li>
-						<li><a href="about.html">Story</a></li>
-						<li class="has-dropdown">
-							<a href="services.html">Services</a>
-							<ul class="dropdown">
-								<li><a href="#">Web Design</a></li>
-								<li><a href="#">eCommerce</a></li>
-								<li><a href="#">Branding</a></li>
-								<li><a href="#">API</a></li>
-							</ul>
-						</li>
-						<li class="has-dropdown">
-							<a href="gallery.html">Gallery</a>
-							<ul class="dropdown">
-								<li><a href="#">HTML5</a></li>
-								<li><a href="#">CSS3</a></li>
-								<li><a href="#">Sass</a></li>
-								<li><a href="#">jQuery</a></li>
-							</ul>
-						</li>
-						<li><a href="contact.html">Contact</a></li>
 					</ul>
 				</div>
 			</div>
@@ -160,61 +140,8 @@
 										<span>Minggu</span>
 										<span>27 November 2022</span>
 									</div>
-									<p>Desa Kebulusan RT 005 RW 002, Pejagoan, Kebumen, Jawa Tengah.</p>
+									<p>Desa Kebulusan RT 005 RW 002,Pejagoan,Kebumen,Jawa Tengah.</p>
 								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div id="fh5co-counter" class="fh5co-bg fh5co-counter" style="background-image:url(images/img_bg_5.jpg);">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row">
-				<div class="display-t">
-					<div class="display-tc">
-						<div class="col-md-3 col-sm-6 animate-box">
-							<div class="feature-center">
-								<span class="icon">
-									<i class="icon-users"></i>
-								</span>
-
-								<span class="counter js-counter" data-from="0" data-to="500" data-speed="5000" data-refresh-interval="50">1</span>
-								<span class="counter-label">Estimated Guest</span>
-
-							</div>
-						</div>
-						<div class="col-md-3 col-sm-6 animate-box">
-							<div class="feature-center">
-								<span class="icon">
-									<i class="icon-user"></i>
-								</span>
-
-								<span class="counter js-counter" data-from="0" data-to="1000" data-speed="5000" data-refresh-interval="50">1</span>
-								<span class="counter-label">We Catter</span>
-							</div>
-						</div>
-						<div class="col-md-3 col-sm-6 animate-box">
-							<div class="feature-center">
-								<span class="icon">
-									<i class="icon-calendar"></i>
-								</span>
-								<span class="counter js-counter" data-from="0" data-to="402" data-speed="5000" data-refresh-interval="50">1</span>
-								<span class="counter-label">Events Done</span>
-							</div>
-						</div>
-						<div class="col-md-3 col-sm-6 animate-box">
-							<div class="feature-center">
-								<span class="icon">
-									<i class="icon-clock"></i>
-								</span>
-
-								<span class="counter js-counter" data-from="0" data-to="2345" data-speed="5000" data-refresh-interval="50">1</span>
-								<span class="counter-label">Hours Spent</span>
-
 							</div>
 						</div>
 					</div>
@@ -228,8 +155,8 @@
 			<div class="row">
 				<div class="row animate-box">
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-						<span>Best Wishes</span>
-						<h2>Friends Wishes</h2>
+						<span>------</span>
+						<h2>Doa Khiatanan</h2>
 					</div>
 				</div>
 				<div class="row">
@@ -238,13 +165,21 @@
 							<div class="owl-carousel-fullwidth">
 								<div class="item">
 									<div class="testimony-slide active text-center">
-										<figure>
-											<img src="images/couple-1.jpg" alt="user">
-										</figure>
-										<span></a></span>
 										<blockquote>
-											<p>"Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics"</p>
+											<p>اَللهم وَفِّقْنَا ِلاجْتِلاَبِ الْفَضَائِلِ وَجَنِّبْنَا مِنْ اِقْتِرَاحِ الرَّذَائِلِ. رَبَّنَا تَقَبَّلْ مِنَّا اَعْذَارَنَا وَسَلِّمْ اُمُوْرَنَا وَصَحِّحْ مَخْتُوْنَنَا وَاقْضِ دُيُوْنَنَا وَبَلِّغْ اَمَالَنَا وَوَسِّعْ اَرْزَاقَنَا وَجُوْدِكَ يَاجَوَّادُ. اَللهم اِنَّا نَسْئَلُكَ السَّلاَمَ وَالْعَافِيَةَ عَلَيْنَا وَعَلَى الْحُجَّاجِ وَالْغُزَاةِ وَالْمُسَافِرِيْنَ مِنْ اُمَّةِ مُحَمَّدٍ صَلَّى اللهُ عَلَيْهِ وَسَلَّمَ اَجْمَعِيْنَ فِيْ بَرِّكَ وَبَحْرِكَ اِنَّكَ عَلى مَا تَشَاءُ قَدِيْرٌ يَا نِعْمَ الْمَوْلى وَنِعْمَ النَّصِيْرُ. سُبْحَانَ رَبِّكَ رَبِّ الْعِزَّةِ عَمَّا يَصِفُوْنَ وَسَلاَمٌ عَلَى الْمُرْسَلِيْنَ وَالْحَمْدُ لِلّٰهِ رَبِّ الْعَالَمِيْنَ</p>
+											<p>"Ya Allah, berilah kami pertolongan untuk memperoleh keutamaan-keutamaan, dan jauhkan kami dari melakukan hal-hal yang hina.
+												Ya Allah, terimalah khitan kami, selamatkanlah urusan-urusan kami, sembuhkanlah dari sakit (karena khitan) ini, bayarkanlah utang-utang kami, jadikanlah (kenyataan) cita-cita kami, lapangkanlah rezeki kami dengan kemurahan-Mu, wahai Zat yang Maha Memberi.
+												Ya Allah, semoga Engkau beri keselamatan kepada kami, kepada orang-orang yang beribadah haji, kepada orang-orang yang berperang (di jalan Allah), dan kepada para musafir, yaitu semua umat Muhammad saw yang ada di darat maupun di laut, sesungguhnya Engkau berkuasa terhadap apa yang Engkau kehendaki, wahai sebaik-baik majikan dan sebaik-baik penolong.
+												Maha Suci Allah, Tuhan yang memiliki kesucian dari segala sifat rendah yang mereka (orang kafir) lekatkan. Dan kesejahteraan bagi para utusan Allah, dan segala puji hanya milik Allah, Tuhan semesta alam."</p>
 										</blockquote>
+									</div>
+								</div>
+								<div class="item">
+									<div class="testimony-slide active text-center">
+									</div>
+								</div>
+								<div class="item">
+									<div class="testimony-slide active text-center">
 									</div>
 								</div>
 							</div>
@@ -255,13 +190,69 @@
 		</div>
 	</div>
 
+	<div id="fh5co-services" class="fh5co-section-gray">
+		<div class="container">
+			
+			<div class="row animate-box">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+					<h2>We Offer Services</h2>
+					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-md-6">
+					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+						<span class="icon">
+							<i class="icon-calendar"></i>
+						</span>
+						<div class="feature-copy">
+							<h3>We Organized Events</h3>
+							<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+						</div>
+					</div>
+
+					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+						<span class="icon">
+							<i class="icon-image"></i>
+						</span>
+						<div class="feature-copy">
+							<h3>Photoshoot</h3>
+							<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+						</div>
+					</div>
+
+					<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
+						<span class="icon">
+							<i class="icon-video"></i>
+						</span>
+						<div class="feature-copy">
+							<h3>Video Editing</h3>
+							<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
+						</div>
+					</div>
+
+				</div>
+
+				<div class="col-md-6 animate-box">
+					<div class="fh5co-video fh5co-bg" style="background-image: url(images/img_bg_3.jpg); ">
+						<a href="https://vimeo.com/channels/staffpicks/93951774" class="popup-vimeo"><i class="icon-video2"></i></a>
+						<div class="overlay"></div>
+					</div>
+				</div>
+			</div>
+
+			
+		</div>
+	</div>
+
 	<footer id="fh5co-footer" role="contentinfo">
 		<div class="container">
 
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">&copy; 2022 S0ju Web Design. All Rights Reserved.</small> 
+						<small class="block">&copy; 2022 Dewi M.S Web Design. All Rights Reserved.</small> 
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
