--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 						<div class="col-md-10 col-md-offset-1">
 							<div class="col-md-6 col-sm-6 text-center">
 								<div class="event-wrap animate-box">
-									<h3>Waktu Acara Dimukai</h3>
+									<h3>Waktu Acara Dimulai</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
 										<span>08:00 PM</span>
