--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
 									<h3>Waktu Acara Dimulai</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
-										<span>08:00 PM</span>
-										<span>03:00 AM</span>
+										<span>08:00 WIB</span>
+										<span>Sampai 15:30 </span>
 									</div>
 									<div class="event-col">
 										<i class="icon-calendar"></i>
