--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 									<h3>Waktu Acara Dimulai</h3>
 									<div class="event-col">
 										<i class="icon-clock"></i>
-										<span>08:00 WIB</span>
+										<span>08:00 </span>
 										<span>Sampai 15:30 </span>
 									</div>
 									<div class="event-col">
