--- a/index.html
+++ b/index.html
@@ -155,35 +155,14 @@
 			<div class="row">
 				<div class="row animate-box">
 					<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-						<span>------</span>
 						<h2>Doa Khiatanan</h2>
 					</div>
 				</div>
+
 				<div class="row">
-					<div class="col-md-12 animate-box">
-						<div class="wrap-testimony">
-							<div class="owl-carousel-fullwidth">
-								<div class="item">
-									<div class="testimony-slide active text-center">
-										<blockquote>
-											<p>اَللهم وَفِّقْنَا ِلاجْتِلاَبِ الْفَضَائِلِ وَجَنِّبْنَا مِنْ اِقْتِرَاحِ الرَّذَائِلِ. رَبَّنَا تَقَبَّلْ مِنَّا اَعْذَارَنَا وَسَلِّمْ اُمُوْرَنَا وَصَحِّحْ مَخْتُوْنَنَا وَاقْضِ دُيُوْنَنَا وَبَلِّغْ اَمَالَنَا وَوَسِّعْ اَرْزَاقَنَا وَجُوْدِكَ يَاجَوَّادُ. اَللهم اِنَّا نَسْئَلُكَ السَّلاَمَ وَالْعَافِيَةَ عَلَيْنَا وَعَلَى الْحُجَّاجِ وَالْغُزَاةِ وَالْمُسَافِرِيْنَ مِنْ اُمَّةِ مُحَمَّدٍ صَلَّى اللهُ عَلَيْهِ وَسَلَّمَ اَجْمَعِيْنَ فِيْ بَرِّكَ وَبَحْرِكَ اِنَّكَ عَلى مَا تَشَاءُ قَدِيْرٌ يَا نِعْمَ الْمَوْلى وَنِعْمَ النَّصِيْرُ. سُبْحَانَ رَبِّكَ رَبِّ الْعِزَّةِ عَمَّا يَصِفُوْنَ وَسَلاَمٌ عَلَى الْمُرْسَلِيْنَ وَالْحَمْدُ لِلّٰهِ رَبِّ الْعَالَمِيْنَ</p>
-											<p>"Ya Allah, berilah kami pertolongan untuk memperoleh keutamaan-keutamaan, dan jauhkan kami dari melakukan hal-hal yang hina.
-												Ya Allah, terimalah khitan kami, selamatkanlah urusan-urusan kami, sembuhkanlah dari sakit (karena khitan) ini, bayarkanlah utang-utang kami, jadikanlah (kenyataan) cita-cita kami, lapangkanlah rezeki kami dengan kemurahan-Mu, wahai Zat yang Maha Memberi.
-												Ya Allah, semoga Engkau beri keselamatan kepada kami, kepada orang-orang yang beribadah haji, kepada orang-orang yang berperang (di jalan Allah), dan kepada para musafir, yaitu semua umat Muhammad saw yang ada di darat maupun di laut, sesungguhnya Engkau berkuasa terhadap apa yang Engkau kehendaki, wahai sebaik-baik majikan dan sebaik-baik penolong.
-												Maha Suci Allah, Tuhan yang memiliki kesucian dari segala sifat rendah yang mereka (orang kafir) lekatkan. Dan kesejahteraan bagi para utusan Allah, dan segala puji hanya milik Allah, Tuhan semesta alam."</p>
-										</blockquote>
-									</div>
-								</div>
-								<div class="item">
-									<div class="testimony-slide active text-center">
-									</div>
-								</div>
-								<div class="item">
-									<div class="testimony-slide active text-center">
-									</div>
-								</div>
-							</div>
-						</div>
+						<blockquote>
+							<p>"Ya Allah, terimalah khitan kami, selamatkanlah urusan-urusan kami, sembuhkanlah dari sakit (karena khitan) ini, bayarkanlah utang-utang kami, jadikanlah (kenyataan) cita-cita kami, lapangkanlah rezeki kami dengan kemurahan-Mu, wahai Zat yang Maha Memberi."</p>
+						</blockquote>
 					</div>
 				</div>
 			</div>
@@ -198,14 +177,6 @@
 				<div class="col-md-12 text-center">
 					<p>
 						<small class="block">&copy; 2022 Dewi M.S Web Design. All Rights Reserved.</small> 
-					</p>
-					<p>
-						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-						</ul>
 					</p>
 				</div>
 			</div>
