--- a/index.html
+++ b/index.html
@@ -75,10 +75,7 @@
 			</div>
 		</div>
 	</header>
-
-
 	
-
 	<div id="fh5co-couple">
 		<div class="container">
 			<div class="row">
@@ -255,3 +252,6 @@
 	</body>
 </html>
 
+  <!--Latar Musik-->
+  <audio src="audio/audio.mp3" autoplay controls></audio>
+  <!--end latar Musik-->
