--- a/index.html
+++ b/index.html
@@ -4,22 +4,36 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 	<head>
-			<meta charset="utf-8" />
-			<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-			<meta name="viewport" content="width=device-width, initial-scale=1" />
-			<title>Undangan Khitanan Muhammad Nizam</title>
-			<!-- Bulma Version 0.8.x-->
-			<link rel="stylesheet" href="https://unpkg.com/bulma@0.8.0/css/bulma.min.css" />
-			<link rel="stylesheet" type="text/css" href="css/menikah.css" />
-			<link rel="stylesheet" type="text/css" href="css/jquery.countdown.css" />
-			<script
-			  src="https://kit.fontawesome.com/2828f7885a.js"
-			  integrity="sha384-WAsFbnLEQcpCk8lM1UTWesAf5rGTCvb2Y+8LvyjAAcxK1c3s5c0L+SYOgxvc6PWG"
-			  crossorigin="anonymous"></script>
-			<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-			<script src="js/jquery.coundown.js"></script>
-			<link rel="icon" type="image/png" href="image/parrot.gif" />
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>Undangan &mdash; Muhammad Nizam Maulana</title>
 
+	<link href='https://fonts.googleapis.com/css?family=Arial:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Arial" rel="stylesheet">
+	
+	<!-- Animate.css -->
+	<link rel="stylesheet" href="css/animate.css">
+	<!-- Icomoon Icon Fonts-->
+	<link rel="stylesheet" href="css/icomoon.css">
+	<!-- Bootstrap  -->
+	<link rel="stylesheet" href="css/bootstrap.css">
+
+	<!-- Magnific Popup -->
+	<link rel="stylesheet" href="css/magnific-popup.css">
+
+	<!-- Owl Carousel  -->
+	<link rel="stylesheet" href="css/owl.carousel.min.css">
+	<link rel="stylesheet" href="css/owl.theme.default.min.css">
+
+	<!-- Theme style  -->
+	<link rel="stylesheet" href="css/style.css">
+
+	<!-- Modernizr JS -->
+	<script src="js/modernizr-2.6.2.min.js"></script>
+	<!-- FOR IE9 below -->
+	<!--[if lt IE 9]>
+	<script src="js/respond.min.js"></script>
+	<![endif]-->
 
 	</head>
 	<body>
@@ -52,9 +66,9 @@
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Muhammad Nizam Maulana</h1>
 							<h2>Putra Bapak Nanang & Ibu Siti Mahmudah</h2>
+							<link rel="stylesheet" type="text/css" href="css/jquery.countdown.css" />
 							<div class="simply-countdown simply-countdown-one"></div>
    						 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-							<link rel="stylesheet" type="text/css" href="css/jquery.countdown.css" />
 						</div>
 					</div>
 				</div>
